# pawel_aidb

./: .gitignore  README.md  articles.txt  pyproject.toml
src/pawel_aidb/: __init__.py  articles.txt  csvCompressor.py  dl.py  newsScraper.py  news_ai.py
